--- a/town_hall_1/styles/c8_main.css
+++ b/town_hall_1/styles/c8_main.css
@@ -1,4 +1,5 @@
 /* the styles for the elements */
+/* the styles for the elements */
 * {
 	margin: 0;
 	padding: 0;
@@ -9,7 +10,8 @@ html {
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    width: 800px;
+    width: 98%;
+	max-width: 960px;
     margin: 0 auto;
     border: 3px solid #931420;
     background-color: #fffded;
@@ -40,7 +42,7 @@ header h3 {
 }
 header img {
 	float: left;
-	padding: 0 30px;
+	padding: 0 3.125%;
 }
 .shadow {
 	text-shadow: 2px 2px 2px #800000;
@@ -51,13 +53,16 @@ header img {
 	margin: 0;
 	padding: 0;
 	position: relative;
+	
 }
 #nav_menu ul li {
 	float: left;
+	width: 20%;
 }
+
 #nav_menu ul li a {
     display: block;
-    width: 160px;
+    
     text-align: center;
     padding: 1em 0;
     text-decoration: none;
@@ -75,6 +80,7 @@ header img {
 }
 #nav_menu ul ul li {
 	float: none;
+	width: 100%;
 }
 #nav_menu ul li:hover > ul {
 	display: block;
@@ -87,9 +93,9 @@ header img {
 
 /* the styles for the section */
 section {
-	width: 525px;
+	width: 54.68%;
 	float: right;
-	padding: 0 20px 20px 20px;
+	padding: 0 2.083%;
 }
 section h1 {
 	font-size: 150%;
@@ -133,14 +139,17 @@ article img {
 	float: right;
 	margin: .5em 0 1em 1em;
 	border: 1px solid black;
+	max-width: 40%;
+	min-width: 150px;
 }
 
 /* the styles for the aside */
 aside {
-	width: 215px;
+	width: 22.39%;
 	float: right;
-	padding: 0 0 20px 20px;
+	padding: 0 2.083%;
 }
+
 aside h2 {
 	color: #800000;
 	font-size: 130%;
@@ -165,4 +174,92 @@ footer p {
 	text-align: center;
 	color: white;
 	padding: 1em 0;
+}
+
+
+/* slickNav_menu */ 
+
+.slicknav_menu{
+	background-color: #800000;
+}
+
+/* media queries */ 
+
+   @media only screen and (max-width: 850px) {
+	  header  {
+	     float: none;
+	     text-align: center;
+	  } 
+    }
+
+   @media only screen and (max-width: 850px) {
+	header img {
+	   float: none;
+	   text-align: center;
+	 }
+   }
+
+  @media only screen and (max-width: 850px) {
+	 section  {
+	   float: none;
+	   width: 95%;
+     }
+   }
+
+   @media only screen and (max-width: 850px) {
+	section img {
+	  width: 23%;
+	}
+  }
+
+ 
+
+   @media only screen and (max-width: 910px) {
+	  section h1{
+	     font-size: 125%;
+	  }
+   }
+
+
+  @media only screen and (max-width: 910px) {
+	 section h2 {
+	   font-size: 110%;
+	}
+  }
+
+  @media only screen and (max-width: 850px) {
+	aside {
+	  padding:0 40% ;
+	  column-count: 2;
+	}
+  }
+
+
+   @media only screen and (max-width: 910px) {
+    aside a {
+	  font-size: 85%;
+      }
+   }
+
+   @media only screen and (max-width: 910px) {
+	 aside h2 {
+	    font-size: 110%;
+	 }
+   }
+   
+
+
+.slicknav_menu {
+	display:none;
+}
+
+@media screen and (max-width: 850px) {
+	/* #menu is the original menu */
+	 #menu {
+		display:none;
+	}
+	
+	.slicknav_menu  {
+		display:block;
+	}
 }
