--- a/town_hall_1/styles/slicknav.css
+++ b/town_hall_1/styles/slicknav.css
@@ -65,9 +65,7 @@
 	clear: both
 }
 /* IE6/7 support */
-.slicknav_menu {
-*zoom: 1
-}
+
 /* 
     User Default Style
     Change the following styles to modify the appearance of the menu.
@@ -97,7 +95,7 @@
 	background-color: #f5f5f5;
 }
 .slicknav_menu {
-	background: #4c4c4c;
+	background: #800000;
 	padding: 5px;
 }
 .slicknav_nav {
@@ -141,6 +139,9 @@
 	border-radius: 6px;
 	background: #ccc;
 	color: #222;
+}
+.slicknav_nav .slicknav_txtnode {
+	margin-left: 15px;
 }
 .slicknav_nav .slicknav_txtnode {
 	margin-left: 15px;
